--- a/public/css/stylesInfo.css
+++ b/public/css/stylesInfo.css
@@ -106,19 +106,19 @@ iframe{
 }
 
 .ruta-desnivel {
-    color: #009900;
+    color: #4CAF50;
 }
 
 .ruta-distancia {
-    color: #009900;
+    color: #4CAF50;
 }
 
 .ruta-direccion {
-    color: #009900;
+    color: #4CAF50;
 }
 
 .ruta-puntuacion {
-    color: #009900;
+    color: #4CAF50;
 }
 
 
