--- a/templates/principal.html.twig
+++ b/templates/principal.html.twig
@@ -17,9 +17,9 @@
 
             <h2 class="principal_subTitulo">Explora un nuevo mundo</h2>
             <div class="carrusel">
-                <p id="btnIzquierda" class="flechas"><i class="fa-solid fa-arrow-left"></i></p>
+                <p id="btnIzquierda" class="flechas icon-arrow-left2"><i class="fa-solid fa-arrow-left"></i></p>
                 <img id="fotoCarrusel" class="imgCarrusel" src="{{ asset('img/carrusel1.jpg') }}" alt="">
-                <p id="btnDerecha" class="flechas"><i class="fa-solid fa-arrow-right"></i></p>
+                <p id="btnDerecha" class="flechas icon-arrow-right2"><i class="fa-solid fa-arrow-right"></i></p>
             </div>
 
             <div class="separador"></div>
@@ -27,23 +27,25 @@
             <h2 class="principal_subTitulo">¡¡Utiliza nuestra web!!</h2>
             <div class="fila">
                 <ul class="principal_funciones">En ella podrás:
-                    <li><i class="icono_lista fa-solid fa-check"></i> ¡Descubrir nuevas rutas!</li>
-                    <li><i class="icono_lista fa-solid fa-check"></i> ¡Conocer a gente nueva!</li>
-                    <li><i class="icono_lista fa-solid fa-check"></i> ¡Encontar las rutas mejor valoradas con toda su información!</li>
+                    <li><i class="icon-fire"></i> ¡Descubrir nuevas rutas!</li>
+                    <li><i class="icon-fire"></i> ¡Conocer a gente nueva!</li>
+                    <li><i class="icon-fire"></i> ¡Encontar las rutas mejor valoradas con toda su información!</li>
                 </ul>
 {#                <img src="{{ asset('Imagenes/') }}" alt="">#}
             </div>
 
             <div class="separador"></div>
 
-            <h2 class="principal_subTitulo">¡¡Localízanos!!</h2>
+            <h2 class="principal_subTitulo">
+                <span class="icon-location2"></span>¡¡Localízanos!!<span class="icon-location2"></span>
+            </h2>
             <div class="fila">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d784.9437232513633!2d-3.635902294337572!3d38.098903218687546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6e9b313c294117%3A0x76134fbbe1e3384a!2sTienda%20SEUR%20Pickup!5e0!3m2!1ses!2ses!4v1701685640254!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="fila2">
                 <p>Contacta con nosotros, visítanos o bien hablanos por correo o llama a nuestro teléfono</p>
-                <p><i class="fa-solid fa-envelope"></i> jaime@gmail.com</p>
-                <p><i class="fa-solid fa-mobile-screen"></i> 666543345</p>
+                <p><i class="icon-envelop"></i> jaime@gmail.com</p>
+                <p><i class="icon-mobile"></i> 666543345</p>
             </div>
         </div>
 {% endblock %}
