--- a/public/css/principal.css
+++ b/public/css/principal.css
@@ -62,7 +62,7 @@ header{
     justify-content: space-evenly;
     margin-bottom: 3em;
     height: 500px;
-    background-color: rgba(217, 194, 88, 0.63);
+    background-color: rgba(76, 175, 80, 0.8);
 }
 
 .carrusel img{
@@ -74,7 +74,7 @@ header{
     filter: drop-shadow(2px 2px 2px);
     border-radius: 0.7em;
     padding: 0.3em;
-    color: rgba(217, 194, 88, 0.63);
+    color: #4CAF50;
 }
 .flechas:hover{
     filter: drop-shadow(0 0 0);
@@ -104,12 +104,13 @@ header{
     width: 30%;
 }
 .icono_lista{
-    color: green;
+    color: #4CAF50;
 }
 .principal_funciones{
     flex-direction: column;
     font-size: 1.8em;
     font-style: italic;
+    list-style:none;
     /*font-family: Rockwell;*/
 }
 .principal_funciones li{
@@ -128,3 +129,4 @@ header{
         max-width: 250px;
     }
 }
+
