--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,8 +14,135 @@ header{
     width: 100%;
     align-items: center;
     top: 0;
-
 }
+
+header button{
+    font-size: 1.5em;
+    color: #4CAF50;
+}
+.main-header{
+    height: 8vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.main-nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100%;
+    margin-left: -100%;
+    transition: all .2s linear;
+    z-index: 100;
+}
+
+.main-nav.show{
+    margin-left: 0;
+}
+
+/*Desplegable*/
+.nav-links{
+    background-color: #383339;
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    height: 100%;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.link-item{
+    margin-top: 2rem;
+    color: white;
+    text-decoration: none;
+    position: relative;
+}
+
+.link-item::after {
+    position: absolute;
+    content: "";
+    background-color: #4CAF50;
+    bottom: -5px;
+    left: 0;
+    width: 0%;
+    height: 3px;
+    transition: 0.3s ease all;
+}
+
+.link-item:hover::after {
+    width: 100%;
+}
+
+.button-menu{
+    z-index: 200;
+    width: 40px;
+    height: 40px;
+    border: none;
+    display: flex;
+    background: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.button-menu span{
+    width: 37px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #444444;
+    border-radius: 3px;
+    transform-origin: 4px 0px;
+    transition: all .2s linear;
+}
+
+.button-menu.close span {
+    opacity: 1;
+    transform: rotate(45deg) translate(0px, 0px);
+}
+
+.button-menu.close span:nth-child(2){
+    transform: rotate(-45deg) translate(-8px, 5px);
+}
+
+.button-menu.close span:nth-child(3){
+    display: none;
+}
+
+@media screen and (min-width:1584px) {
+    .button-menu{
+        display: none;
+    }
+
+    .main-logo{
+        flex-basis: 30%;
+    }
+
+    .main-nav{
+        position: static;
+        margin-left: 0;
+        flex-basis: 70%;
+        height: 100%;
+    }
+
+    .nav-links{
+        width: 100%;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: flex-end;
+    }
+
+    .link-item{
+        display: inline-block;
+        margin-top: 0;
+    }
+}
+
 header .logo{
     width: 20vh;
     height: 100%;
@@ -38,12 +165,13 @@ header li{
 
 header a{
     color: white;
-    padding: 0 1em;
+    padding: 0 1.5em;
     text-decoration: none;
 }
 
 header a:hover{
-    background-color: rgb(151, 141, 141);
+    text-decoration: none;
+    color: white;
 }
 
 footer{
