--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,12 +8,14 @@
         <link rel="stylesheet" href="//cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css">
         <script src="//cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
         <script src="{{ asset('DataTables/script.js') }}"></script>
+        <script src="{{ asset('js/hamburguesa.js') }}"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.2/css/uikit.min.css">
         <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.uikit.min.css">
         <link rel="stylesheet" href="{{ asset('css/stylesRutas.css') }}">
         <link rel="stylesheet" href="{{ asset('css/stylesInfo.css') }}">
         <link rel="stylesheet" href="{{ asset('css/login.css') }}">
-
+        <link rel="stylesheet" href="{{ asset('css/listado.css') }}">
+        <link rel="stylesheet" href="https://i.icomoon.io/public/temp/4313d5e2b9/UntitledProject/style.css">
 
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
@@ -28,82 +30,7 @@
     <body>
         {% block body %}
         {% endblock %}
-{#        <h1>Ruta Senderismo</h1>#}
 
-        {#{% block body %}
-            <header>
-                <ul class="lista">
-                    <li>
-                        <a href="{{ path('index') }}">Inicio</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('ruta_listar') }}">Rutas</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('ruta_nueva') }}">Crear ruta</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('valoracion_listar') }}">Valoraciones</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('usuario_listar') }}">Perfil</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('usuario_nuevo') }}">Iniciar sesión</a>
-                    </li>
-                </ul>
-            </header>
-            <nav>
-                <div class="contenido">
-                    <p>NAV</p>
 
-                    <div class="autor">
-                        <label for="">Autor:</label>
-                        <span>juanlu99</span>
-                    </div>
-
-                    <p>
-                        <label for="">Distancia: </label>
-                        <span>12.3 km</span>
-                    </p>
-                    <p>
-                        <label for="">Desnivel: </label>
-                        <span>1254 m</span>
-                    </p>
-                    <p>
-                        <label for="">Valoración: </label>
-                        <span>4.5</span>
-                    </p>
-                    <p>
-                        <label for="">Dirección: </label>
-                        <span>2851</span>
-                    </p>
-                </div>
-            </nav>
-            <article>
-                <div class="contenido">
-                    <p>ARTICLE</p>
-
-                    <p>IMAGEN MAPA</p>
-
-                    <div class="divImg">
-                        <img src="" alt="" class="imgMapa">
-                    </div>
-
-                    <h2>Nombre de la ruta</h2>
-
-                    <p>Introduccción información de la ruta.</p>
-                    <p>Nudo información de la ruta.</p>
-                    <p>Desenlace información de la ruta.</p>
-                </div>
-
-            </article>
-
-            <hr>
-
-            <footer>
-                <p class="parrafoFooter">2023, Jaime Corpas Gómez</p>
-            </footer>
-        {% endblock %}#}
     </body>
 </html>
