--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -1,87 +1,38 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <header>
+    <header class="main-header">
         <div class="logo"></div>
-        <ul class="lista">
-            <li>
-                <a href="{{ path('principal') }}">Inicio</a>
-            </li>
-            <li>
-                <a href="{{ path('ruta_listar') }}">Rutas</a>
-            </li>
-            <li>
-                <a href="{{ path('ruta_listar_detalle') }}">Rutas Detalle</a>
-            </li>
-            <li>
-                <a href="{{ path('valoracion_listar') }}">Valoraciones</a>
-            </li>
 
-            <li>
-                <a href="{{ path('usuario_listar') }}">Usuarios</a>
-            </li>
+        <nav id="nav" class="main-nav" >
+            <div class="nav-links" >
+                <a class="link-item" href="{{ path('principal') }}">Inicio</a>
+                {% if is_granted('ROLE_MODERADOR') == true %}
+                    <a class="link-item icon-accessibility" href="{{ path('ruta_listar') }}">Rutas</a>
+                {% endif %}
+                <a class="link-item icon-compass2" href="{{ path('ruta_listar_detalle') }}">Rutas Detalle</a>
+                {% if is_granted('ROLE_MODERADOR') == true %}
+                    <a class="link-item icon-star-empty" href="{{ path('valoracion_listar') }}">Valoraciones</a>
+                {% endif %}
+                {% if is_granted('ROLE_ADMIN') == true %}
+                    <a class="link-item icon-users" href="{{ path('usuario_listar') }}">Usuarios</a>
+                {% endif %}
+                {% if is_granted('ROLE_USUARIO') == false %}
+                    <a class="link-item icon-enter" aria-current="page" href="{{ path('entrar') }}">Login</a>
+                {% endif %}
+                {% if is_granted('ROLE_USUARIO') %}
+                    <a class="link-item icon-user-tie" aria-current="page" href="{{ path('salir') }}">Perfil</a>
+                    <a class="link-item icon-exit" aria-current="page" href="{{ path('salir') }}">Logout</a>
+                {% endif %}
+            </div>
+        </nav>
 
-            {% if is_granted('ROLE_USUARIO') == false %}
-                <li>
-                    <a aria-current="page" href="{{ path('entrar') }}">Login</a>
-                </li>
-            {% endif %}
-            {% if is_granted('ROLE_USUARIO') %}
-                <li class="nav-item">
-                    <a aria-current="page" href="{{ path('salir') }}">Logout</a>
-                </li>
-            {% endif %}
-        </ul>
+        <button id="button-menu" class="button-menu icon-menu"></button>
     </header>
 
     <div class="contenido">
         {% block content %}{% endblock %}
     </div>
-    {#<nav>
-        <div class="contenido">
-            <p>NAV</p>
-
-            <div class="autor">
-                <label for="">Autor:</label>
-                <span>juanlu99</span>
-            </div>
-
-            <p>
-                <label for="">Distancia: </label>
-                <span>12.3 km</span>
-            </p>
-            <p>
-                <label for="">Desnivel: </label>
-                <span>1254 m</span>
-            </p>
-            <p>
-                <label for="">Valoración: </label>
-                <span>4.5</span>
-            </p>
-            <p>
-                <label for="">Dirección: </label>
-                <span>2851</span>
-            </p>
-        </div>
-    </nav>
-    <article>
-        <div class="contenido">
-            <p>ARTICLE</p>
-
-            <p>IMAGEN MAPA</p>
-
-            <div class="divImg">
-                <img src="" alt="" class="imgMapa">
-            </div>
-
-            <h2>Nombre de la ruta</h2>
-
-            <p>Introduccción información de la ruta.</p>
-            <p>Nudo información de la ruta.</p>
-            <p>Desenlace información de la ruta.</p>
-        </div>
-
-    </article>#}
 
     <footer>
         <p class="parrafoFooter">2023, Jaime Corpas Gómez</p>
