Solucionado problema iconos

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,8 +15,9 @@
         <link rel="stylesheet" href="{{ asset('css/stylesInfo.css') }}">
         <link rel="stylesheet" href="{{ asset('css/login.css') }}">
         <link rel="stylesheet" href="{{ asset('css/listado.css') }}">
-        <link rel="stylesheet" href="https://i.icomoon.io/public/temp/4313d5e2b9/UntitledProject/style.css">
-
+        <link rel="stylesheet" href="{{ asset('icomoon/style.css') }}">
+{#        <link rel="stylesheet" href="https://i.icomoon.io/public/temp/df6fd70388/UntitledProject/style.css">#}
+        
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
