--- a/templates/ruta/listadoInfo.html.twig
+++ b/templates/ruta/listadoInfo.html.twig
@@ -48,7 +48,7 @@
                 {% endfor %}
 
                 <div class="gallery">
-                    <p>IMÁGENES</p>
+                    <p>IMÁGENES <span class="icon-camera"></span></p>
                     <div class="gallery-images">
                         {% for imagen in imagenes %}
                             <img src="{{ asset(imagen.direccion) }}" class="thumbnail" alt="">
